--- a/user-onboarding/src/App.css
+++ b/user-onboarding/src/App.css
@@ -27,11 +27,13 @@
 .user-form {
   display: flex;
   flex-direction: column;
+  /* align-items: flex-start; */
   width: 500px;
 }
 
 .input {
   font-size: 1.6rem;
+  /* width: 100%; */
   margin-bottom: 15px;
   background-color: whitesmoke;
   border: 1px solid dodgerblue;
@@ -44,6 +46,7 @@ label {
   font-size: 1.6rem;
   display: flex;
   align-items: center;
+  width: 100%;
 }
 
 button {
@@ -54,4 +57,8 @@ button {
   background-color: dodgerblue;
   color: white;
   border-radius: 10px;
+}
+
+li {
+  text-align: left;
 }
