--- a/user-onboarding/src/App.css
+++ b/user-onboarding/src/App.css
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: column;
   /* align-items: flex-start; */
-  width: 500px;
+  width: 550px;
 }
 
 .input {
@@ -47,6 +47,10 @@ label {
   display: flex;
   align-items: center;
   width: 100%;
+}
+
+.check-box {
+  margin-right: 10px;
 }
 
 button {
